# isucon11-qualify-rust-axum

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  crates.js  docker-compose.override.yml.example  docker-compose.yml  search-index.js  settings.html  source-files.js
async_redis_session/: all.html  index.html  sidebar-items.js  struct.RedisSessionStore.html
async_session/: all.html  attr.async_trait.html  index.html  sidebar-items.js  struct.CookieStore.html  struct.Error.html  struct.MemoryStore.html  struct.Session.html  trait.SessionStore.html  type.Result.html
axum/: all.html  index.html  sidebar-items.js  struct.AddExtension.html  struct.AddExtensionLayer.html  struct.Error.html  struct.Json.html  struct.Router.html  type.BoxError.html
axum_core/: all.html  index.html  struct.Error.html  type.BoxError.html
base64ct/: all.html  enum.Error.html  index.html  struct.Base64.html  struct.Base64Bcrypt.html  struct.Base64Crypt.html  struct.Base64Unpadded.html  struct.Base64Url.html  struct.Base64UrlUnpadded.html  struct.InvalidEncodingError.html  struct.InvalidLengthError.html  trait.Encoding.html
blake3/: all.html  constant.KEY_LEN.html  constant.OUT_LEN.html  fn.derive_key.html  fn.hash.html  fn.keyed_hash.html  index.html  struct.Hash.html  struct.Hasher.html  struct.OutputReader.html
chrono/: struct.Duration.html
combine/: all.html  enum.ParseResult.html  fn.any.html  fn.attempt.html  fn.between.html  fn.chainl1.html  fn.chainr1.html  fn.choice.html  fn.count.html  fn.count_min_max.html  fn.eof.html  fn.from_str.html  fn.look_ahead.html  fn.many.html  fn.many1.html  fn.none_of.html  fn.not_followed_by.html  fn.one_of.html  fn.optional.html  fn.parser.html  fn.position.html  fn.produce.html  fn.satisfy.html  fn.satisfy_map.html  fn.sep_by.html  fn.sep_by1.html  fn.sep_end_by.html  fn.sep_end_by1.html  fn.skip_count.html  fn.skip_count_min_max.html  fn.skip_many.html  fn.skip_many1.html  fn.token.html  fn.tokens.html  fn.tokens_cmp.html  fn.unexpected.html  fn.unexpected_any.html  fn.value.html  index.html  macro.choice.html  (+16 more)
const_oid/: all.html  index.html  struct.ObjectIdentifier.html
cookie/: enum.Expiration.html  index.html  struct.Cookie.html  struct.CookieBuilder.html  struct.Display.html
crc/: trait.Width.html
crossbeam_queue/: all.html  index.html  struct.ArrayQueue.html
crypto_bigint/: constant.LIMB_BYTES.html  index.html  struct.Checked.html  struct.NonZero.html  struct.UInt.html  struct.Wrapping.html  trait.AddMod.html  trait.ArrayDecoding.html  trait.ArrayEncoding.html  trait.Concat.html  trait.Encoding.html  trait.Integer.html  trait.MulMod.html  trait.NegMod.html  trait.Random.html  trait.RandomMod.html  trait.Split.html  trait.SubMod.html  type.ByteArray.html  type.U1024.html  type.U128.html  type.U1536.html  type.U1792.html  type.U192.html  type.U2048.html  type.U256.html  type.U3072.html  type.U3584.html  type.U384.html  type.U4096.html  type.U448.html  type.U512.html  type.U6144.html  type.U64.html  type.U768.html  type.U8192.html  type.U896.html
der/: all.html  enum.Class.html  enum.ErrorKind.html  enum.Tag.html  index.html  struct.Decoder.html  struct.Encoder.html  struct.Error.html  struct.Header.html  struct.Length.html  struct.TagNumber.html  trait.Choice.html  trait.Decodable.html  trait.Encodable.html  trait.Tagged.html
difflib/: all.html  fn.context_diff.html  fn.get_close_matches.html  fn.unified_diff.html  index.html  sidebar-items.js
downcast/: all.html  index.html  macro.downcast.html  macro.downcast_methods.html  macro.downcast_sync.html  macro.impl_downcast.html  macro.impl_downcast_sync.html  sidebar-items.js  struct.DowncastError.html  struct.TypeMismatch.html  trait.Any.html  trait.AnySync.html  trait.Downcast.html  trait.DowncastSync.html
float_cmp/: all.html  index.html  macro.approx_eq.html  macro.assert_approx_eq.html  sidebar-items.js  struct.F32Margin.html  struct.F64Margin.html  trait.ApproxEq.html  trait.ApproxEqRatio.html  trait.ApproxEqUlps.html  trait.Ulps.html
fragile/: all.html  index.html  struct.Fragile.html  struct.InvalidThreadAccess.html  struct.SemiSticky.html  struct.Sticky.html
futures_util/: all.html  index.html
http_range_header/: all.html  fn.parse_range_header.html  index.html  (+2 more)
isucondition-axum/: Cargo.toml
isucondition-axum/src/: main.rs
isucondition-axum/src/requests/: current_user_id.rs  session.rs
isucondition-axum/src/responses/: error.rs  isu_condition_response.rs  mod.rs
isucondition-axum/src/routes/: authorization_routes.rs  isu_condition_routes.rs  isu_routes.rs  trend_routes.rs  user_routes.rs
isucondition-axum/src/routes/isu_routes/tests/: get_isu_list.rs  mod.rs
isucondition-axum/src/test_helper/: mod.rs
isucondition-core/: Cargo.toml
isucondition-core/src/: database.rs  lib.rs  test.rs
isucondition-core/src/models/: isu.rs  isu_association_config.rs  isu_condition.rs  mod.rs  trend.rs  user.rs
isucondition-core/src/repos/: isu_association_config_repository.rs  isu_condition_repository.rs  isu_repository.rs  mod.rs  repository_manager.rs  transaction.rs  user_repository.rs
isucondition-core/src/repos/isu_repository/tests/: find_all_by_character.rs  find_all_by_user_id.rs  find_all_by_user_id_in_tx.rs  find_by_uuid_and_user_id.rs  find_character_group_by.rs  find_image_by_uuid_and_user_id.rs  mod.rs
isucondition-core/src/services/: isu_list_service.rs  mod.rs  reset_database_service.rs  service_manager.rs  trend_list_service.rs  trend_service.rs
isucondition-core/src/services/trend_list_service/tests/: get_trend.rs  mod.rs  run.rs
isucondition-http/: Cargo.toml
isucondition-http/src/: lib.rs  main.rs
isucondition-http/src/requests/: current_user_id.rs  mod.rs  session.rs
isucondition-http/src/responses/: error.rs  isu_response.rs  mod.rs  trend_response.rs
isucondition-http/src/routes/: authorization_routes.rs  initialize_routes.rs  isu_condition_routes.rs  isu_routes.rs  mod.rs  trend_routes.rs  user_routes.rs
isucondition-http/src/routes/isu_routes/tests/: get_isu_list.rs
isucondition-http/src/test_helper/: mod.rs
src/: lib.rs  (+1 more)
(+18570 files in other folders)
