[package]
name = "isucon11-qualify-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.6"
tracing = "0.1.29"
reqwest = { version = "0.11.9", features = ["json"] }
hyper = "0.14.16"
anyhow = "1.0.53"
sqlx = { version = "0.5.10", features = ["mysql", "runtime-tokio-native-tls"] }
async-trait = "0.1.52"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }

[features]
