[package]
name = "isucon11-qualify-rust-axum"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["isucondition-core", "isucondition-http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.6"
tracing = "0.1.29"
reqwest = { version = "0.11.9", features = ["json"] }
hyper = "0.14.16"
anyhow = "1.0.53"
sqlx = { version = "0.5.10", features = ["mysql", "time", "runtime-tokio-native-tls"] }
async-trait = "0.1.52"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
tower = "0.4.11"
tower-cookies = "0.4.1"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
isucondition-core = { path = "./isucondition-core/" }
isucondition-http = { path = "./isucondition-http/" }

[features]
