[workspace]
members = ["isucondition-core", "isucondition-axum"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["mysql", "chrono", "runtime-tokio-native-tls"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
