[package]
name = "isucondition-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isucondition-core = { path = "../isucondition-core/" }

anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

axum = { version = "0.5", features = ["headers"] }
hyper = "0.14"
jsonwebtoken = "8"
lazy_static = "1"
reqwest = { version = "0.11", features = ["json"] }
tower = "0"
tower-cookies = "0.7"
tracing-subscriber = "0.3"
async-session = "3.0"
async-redis-session = "0.2"

[dev-dependencies]
isucondition-core = { path = "../isucondition-core/", features = ["test"] }
sqlx.workspace = true

