[package]
name = "isucondition-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test = ["mockall"]

[dependencies]
sqlx = { version = "0.6", features = ["mysql", "chrono", "runtime-tokio-native-tls"] }
chrono = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
url = "2.2"
mockall = { version = "0.11", optional = true }

[dev-dependencies]
mockall = "0.11"
