[package]
name = "isucondition-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test = ["mockall"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

url = "2.2"
mockall = { version = "0.11", optional = true }

[dev-dependencies]
mockall = "0.11"
