[package]
name = "isucondition-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4", features = ["headers"] }
isucondition-core = { path = "../isucondition-core/" }
serde_json = "1.0.78"
tracing = "0.1.29"
serde = { version = "1.0.136", features = ["derive"] }
tower = "0.4.11"
tower-cookies = "0.4.1"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
