[package]
name = "isucondition-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isucondition-core = { path = "../isucondition-core/" }

anyhow = "1.0.53"
async-trait = "0.1.52"
axum = { version = "0.4.4", features = ["headers"] }
chrono = "0.4.19"
hyper = "0.14.16"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1", features = ["full"] }
tower = "0.4.11"
tower-cookies = "0.4.1"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
thiserror = "1.0.30"

[dev-dependencies]
sqlx = { version = "0.5.10", features = ["mysql", "chrono", "runtime-tokio-native-tls"] }
