[package]
name = "isucondition-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isucondition-core = { path = "../isucondition-core/" }

anyhow = "1"
async-trait = "0.1"
axum = { version = "0.4", features = ["headers"] }
chrono = "0.4"
hyper = "0.14"
jsonwebtoken = "8"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-cookies = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
async-session = "3.0.0"

[dev-dependencies]
sqlx = { version = "0.5", features = ["mysql", "chrono", "runtime-tokio-native-tls"] }
